--- a/package.json
+++ b/package.json
@@ -1,34 +1,17 @@
 {
-  "name": "tube-app",
-  "version": "0.1.0",
+  "name": "tube-backend",
+  "version": "1.0.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "startDev": "concurrently \"npm run start\" \"npm run client\"",
+    "startServer": "node app.js",
+    "startClient": "npm start --prefix client",
+    "installAll": "npm install & cd client & npm install",
+    "buildClient": "npm run build --prefix client"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "axios": "^0.19.2",
+    "concurrently": "^5.1.0",
+    "express": "~4.16.1"
   }
 }
