--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "startDev": "concurrently \"npm run start\" \"npm run client\"",
+    "startDev": "concurrently \"npm run startServer\" \"npm run startClient\"",
     "startServer": "node app.js",
     "startClient": "npm start --prefix client",
     "installAll": "npm install & cd client & npm install",
